# pdf2md-unlimited-ocr

./: .gitignore  AGENTS.md  README.md  index.md  justfile  project.md  pylock.toml  pyproject.toml  zensical.toml
.agents/skills/pdf2md-development/: SKILL.md
.agents/skills/pdf2md-development/agents/: openai.yaml
.claude/: CLAUDE.md
docs/: index.md
examples/unlimited-ocr-sample/: sample.md
scripts/: download-test-data.fish
src/: main.py
src/pdf2md_unlimited_ocr/: __init__.py  cli.py  converter.py  image_understanding.py  main.py  markdown.py  ocr.py  renderer.py  repetition.py
tests/: test_conversion.py
