[project]
name = "pdf2md-unlimited-ocr"
version = "0.1.0"
description = "Convert PDF files to Markdown locally with PDFium and Unlimited OCR"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mlx-vlm>=0.6.5",
    "pillow>=12.3.0",
    "pypdfium2>=5.12.0",
]

[project.scripts]
pdf2md-unlimited-ocr = "pdf2md_unlimited_ocr.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.12",
    "pre-commit>=4.5.1",
    "zensical>=0.0.19",
    "pytest>=9.0.2",
    "mkdocstrings-python>=2.0.1",
    "reportlab>=5.0.0",
]

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true

# Enforce docstrings to generate documenation from

[tool.ruff.lint]
select = ["D", "E4", "E7", "E9", "F"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
markers = [
    "integration: runs the local Unlimited OCR model through MLX",
]
